Compilers (CS31003)/Lab/Assignments/Assignment 4/asgn4_17CS10005/y.output
State 319 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 constant: INT_CONSTANT
    2         | FLOAT_CONSTANT
    3         | ENU_CONSTANT
    4         | CHAR_CONSTANT

    5 primary_expression: IDENTIFIER
    6                   | constant
    7                   | STRING_LITERAL
    8                   | '(' expression ')'

    9 postfix_expression: primary_expression
   10                   | postfix_expression '[' expression ']'
   11                   | postfix_expression '(' ')'
   12                   | postfix_expression '(' argument_expression_list ')'
   13                   | postfix_expression '.' IDENTIFIER
   14                   | postfix_expression POINTER IDENTIFIER
   15                   | postfix_expression INCREMENT
   16                   | postfix_expression DECREMENT
   17                   | '(' type_name ')' '{' initializer_list '}'
   18                   | '(' type_name ')' '{' initializer_list ',' '}'

   19 argument_expression_list: assignment_expression
   20                         | argument_expression_list ',' assignment_expression

   21 unary_expression: postfix_expression
   22                 | INCREMENT unary_expression
   23                 | DECREMENT unary_expression
   24                 | unary_operator cast_expression
   25                 | SIZEOF unary_expression
   26                 | SIZEOF '(' type_name ')'

   27 unary_operator: '&'
   28               | '*'
   29               | '+'
   30               | '-'
   31               | '~'
   32               | '!'

   33 cast_expression: unary_expression
   34                | '(' type_name ')' cast_expression

   35 multiplicative_expression: cast_expression
   36                          | multiplicative_expression '*' cast_expression
   37                          | multiplicative_expression '/' cast_expression
   38                          | multiplicative_expression '%' cast_expression

   39 additive_expression: multiplicative_expression
   40                    | additive_expression '+' multiplicative_expression
   41                    | additive_expression '-' multiplicative_expression

   42 shift_expression: additive_expression
   43                 | shift_expression LEFTSHIFT additive_expression
   44                 | shift_expression RIGHTSHIFT additive_expression

   45 relational_expression: shift_expression
   46                      | relational_expression '<' shift_expression
   47                      | relational_expression '>' shift_expression
   48                      | relational_expression LESSTHANEQUAL shift_expression
   49                      | relational_expression GREATERTHANEQUAL shift_expression

   50 equality_expression: relational_expression
   51                    | equality_expression EQUALEQUAL relational_expression
   52                    | equality_expression NOTEQUAL relational_expression

   53 AND_expression: equality_expression
   54               | AND_expression '&' equality_expression

   55 exclusive_OR_expression: AND_expression
   56                        | exclusive_OR_expression '^' AND_expression

   57 inclusive_OR_expression: exclusive_OR_expression
   58                        | inclusive_OR_expression '|' exclusive_OR_expression

   59 logical_AND_expression: inclusive_OR_expression
   60                       | logical_AND_expression AND inclusive_OR_expression

   61 logical_OR_expression: logical_AND_expression
   62                      | logical_OR_expression OR logical_AND_expression

   63 conditional_expression: logical_OR_expression
   64                       | logical_OR_expression '?' expression ':' conditional_expression

   65 assignment_expression: conditional_expression
   66                      | unary_expression assignment_operator assignment_expression

   67 assignment_operator: '='
   68                    | MULTIPLYASSIGN
   69                    | DIVIDEASSIGN
   70                    | MODASSIGN
   71                    | ADDASSIGN
   72                    | SUBTRACTASSIGN
   73                    | LEFTSHIFTASSIGN
   74                    | RIGHTSHIFTASSIGN
   75                    | ANDASSIGN
   76                    | XORASSIGN
   77                    | ORASSIGN

   78 expression: assignment_expression
   79           | expression ',' assignment_expression

   80 constant_expression: conditional_expression

   81 declaration: declaration_specifiers ';'
   82            | declaration_specifiers init_declarator_list ';'

   83 declaration_specifiers: storage_class_specifier
   84                       | storage_class_specifier declaration_specifiers
   85                       | type_specifier
   86                       | type_specifier declaration_specifiers
   87                       | type_qualifier
   88                       | type_qualifier declaration_specifiers
   89                       | function_specifier
   90                       | function_specifier declaration_specifiers

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list ',' init_declarator

   93 init_declarator: declarator
   94                | declarator '=' initializer

   95 storage_class_specifier: EXTERN
   96                        | STATIC
   97                        | AUTO
   98                        | REGISTER

   99 type_specifier: VOID
  100               | CHAR
  101               | SHORT
  102               | INT
  103               | LONG
  104               | FLOAT
  105               | DOUBLE
  106               | SIGNED
  107               | UNSIGNED
  108               | BOOL
  109               | COMPLEX
  110               | IMAGINARY
  111               | enum_specifier

  112 specifier_qualifier_list: type_specifier specifier_qualifier_list
  113                         | type_specifier
  114                         | type_qualifier specifier_qualifier_list
  115                         | type_qualifier

  116 enum_specifier: ENUM '{' enumerator_list '}'
  117               | ENUM IDENTIFIER '{' enumerator_list '}'
  118               | ENUM '{' enumerator_list ',' '}'
  119               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  120               | ENUM IDENTIFIER

  121 enumerator_list: enumerator
  122                | enumerator_list ',' enumerator

  123 enumerator: IDENTIFIER
  124           | IDENTIFIER '=' constant_expression

  125 type_qualifier: CONST
  126               | VOLATILE
  127               | RESTRICT

  128 function_specifier: INLINE

  129 declarator: pointer direct_declarator
  130           | direct_declarator

  131 direct_declarator: IDENTIFIER
  132                  | '(' declarator ')'
  133                  | direct_declarator '[' type_qualifier_list_opt assignment_expression_opt ']'
  134                  | direct_declarator '[' STATIC type_qualifier_list_opt assignment_expression ']'
  135                  | direct_declarator '[' type_qualifier_list_opt '*' ']'
  136                  | direct_declarator '(' parameter_type_list ')'
  137                  | direct_declarator '(' identifier_list ')'
  138                  | direct_declarator '(' ')'

  139 type_qualifier_list_opt: %empty
  140                        | type_qualifier_list

  141 assignment_expression_opt: %empty
  142                          | assignment_expression

  143 pointer: '*'
  144        | '*' type_qualifier_list
  145        | '*' pointer
  146        | '*' type_qualifier_list pointer

  147 type_qualifier_list: type_qualifier
  148                    | type_qualifier_list type_qualifier

  149 parameter_type_list: parameter_list
  150                    | parameter_list ',' ELLIPSIS

  151 parameter_list: parameter_declaration
  152               | parameter_list ',' parameter_declaration

  153 parameter_declaration: declaration_specifiers declarator
  154                      | declaration_specifiers

  155 identifier_list: IDENTIFIER
  156                | identifier_list ',' IDENTIFIER

  157 type_name: specifier_qualifier_list

  158 initializer: assignment_expression
  159            | '{' initializer_list '}'
  160            | '{' initializer_list ',' '}'

  161 initializer_list: initializer
  162                 | designation initializer
  163                 | initializer_list ',' initializer
  164                 | initializer_list ',' designation initializer

  165 designation: designator_list '='

  166 designator_list: designator
  167                | designator_list designator

  168 designator: '[' constant_expression ']'
  169           | '.' IDENTIFIER

  170 statement: labeled_statement
  171          | compound_statement
  172          | expression_statement
  173          | selection_statement
  174          | iteration_statement
  175          | jump_statement

  176 labeled_statement: IDENTIFIER ':' statement
  177                  | CASE constant_expression ':' statement
  178                  | DEFAULT ':' statement

  179 compound_statement: '{' '}'
  180                   | '{' block_item_list '}'

  181 block_item_list: block_item
  182                | block_item_list block_item

  183 block_item: declaration
  184           | statement

  185 expression_statement: ';'
  186                     | expression ';'

  187 selection_statement: IF '(' expression ')' statement
  188                    | IF '(' expression ')' statement ELSE statement
  189                    | SWITCH '(' expression ')' statement

  190 iteration_statement: WHILE '(' expression ')' statement
  191                    | DO statement WHILE '(' expression ')' ';'
  192                    | FOR '(' expression_statement expression_statement ')' statement
  193                    | FOR '(' expression_statement expression_statement expression ')' statement

  194 jump_statement: GOTO IDENTIFIER ';'
  195               | CONTINUE ';'
  196               | BREAK ';'
  197               | RETURN ';'
  198               | RETURN expression ';'

  199 translation_unit: external_declaration
  200                 | translation_unit external_declaration

  201 external_declaration: function_definition
  202                     | declaration

  203 function_definition: declaration_specifiers declarator declaration_list compound_statement
  204                    | declaration_specifiers declarator compound_statement
  205                    | declarator declaration_list compound_statement
  206                    | declarator compound_statement

  207 declaration_list: declaration
  208                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 32
'%' (37) 38
'&' (38) 27 54
'(' (40) 8 11 12 17 18 26 34 132 136 137 138 187 188 189 190 191 192
    193
')' (41) 8 11 12 17 18 26 34 132 136 137 138 187 188 189 190 191 192
    193
'*' (42) 28 36 135 143 144 145 146
'+' (43) 29 40
',' (44) 18 20 79 92 118 119 122 150 152 156 160 163 164
'-' (45) 30 41
'.' (46) 13 169
'/' (47) 37
':' (58) 64 176 177 178
';' (59) 81 82 185 186 191 194 195 196 197 198
'<' (60) 46
'=' (61) 67 94 124 165
'>' (62) 47
'?' (63) 64
'[' (91) 10 133 134 135 168
']' (93) 10 133 134 135 168
'^' (94) 56
'{' (123) 17 18 116 117 118 119 159 160 179 180
'|' (124) 58
'}' (125) 17 18 116 117 118 119 159 160 179 180
'~' (126) 31
error (256)
AND (258) 60
DECREMENT (259) 16 23
EQUALEQUAL (260) 51
INCREMENT (261) 15 22
OR (262) 62
LEFTSHIFT (263) 43
RIGHTSHIFT (264) 44
LESSTHANEQUAL (265) 48
GREATERTHANEQUAL (266) 49
NOTEQUAL (267) 52
POINTER (268) 14
MULTIPLYASSIGN (269) 68
ELLIPSIS (270) 150
DIVIDEASSIGN (271) 69
MODASSIGN (272) 70
ADDASSIGN (273) 71
LEFTSHIFTASSIGN (274) 73
RIGHTSHIFTASSIGN (275) 74
SUBTRACTASSIGN (276) 72
ANDASSIGN (277) 75
XORASSIGN (278) 76
ORASSIGN (279) 77
SIZEOF (280) 25 26
EXTERN (281) 95
STATIC (282) 96 134
AUTO (283) 97
REGISTER (284) 98
VOID (285) 99
CHAR (286) 100
SHORT (287) 101
INT (288) 102
LONG (289) 103
FLOAT (290) 104
DOUBLE (291) 105
SIGNED (292) 106
UNSIGNED (293) 107
BOOL (294) 108
COMPLEX (295) 109
IMAGINARY (296) 110
ENUM (297) 116 117 118 119 120
CONST (298) 125
RESTRICT (299) 127
VOLATILE (300) 126
INLINE (301) 128
CASE (302) 177
DEFAULT (303) 178
IF (304) 187 188
ELSE (305) 188
SWITCH (306) 189
WHILE (307) 190 191
DO (308) 191
FOR (309) 192 193
GOTO (310) 194
CONTINUE (311) 195
BREAK (312) 196
RETURN (313) 197 198
INT_CONSTANT (314) 1
FLOAT_CONSTANT (315) 2
ENU_CONSTANT (316) 3
CHAR_CONSTANT (317) 4
IDENTIFIER (318) 5 13 14 117 119 120 123 124 131 155 156 169 176 194
STRING_LITERAL (319) 7


Nonterminals, with rules where they appear

$accept (89)
    on left: 0
constant (90)
    on left: 1 2 3 4, on right: 6
primary_expression (91)
    on left: 5 6 7 8, on right: 9
postfix_expression (92)
    on left: 9 10 11 12 13 14 15 16 17 18, on right: 10 11 12 13 14
    15 16 21
argument_expression_list (93)
    on left: 19 20, on right: 12 20
unary_expression (94)
    on left: 21 22 23 24 25 26, on right: 22 23 25 33 66
unary_operator (95)
    on left: 27 28 29 30 31 32, on right: 24
cast_expression (96)
    on left: 33 34, on right: 24 34 35 36 37 38
multiplicative_expression (97)
    on left: 35 36 37 38, on right: 36 37 38 39 40 41
additive_expression (98)
    on left: 39 40 41, on right: 40 41 42 43 44
shift_expression (99)
    on left: 42 43 44, on right: 43 44 45 46 47 48 49
relational_expression (100)
    on left: 45 46 47 48 49, on right: 46 47 48 49 50 51 52
equality_expression (101)
    on left: 50 51 52, on right: 51 52 53 54
AND_expression (102)
    on left: 53 54, on right: 54 55 56
exclusive_OR_expression (103)
    on left: 55 56, on right: 56 57 58
inclusive_OR_expression (104)
    on left: 57 58, on right: 58 59 60
logical_AND_expression (105)
    on left: 59 60, on right: 60 61 62
logical_OR_expression (106)
    on left: 61 62, on right: 62 63 64
conditional_expression (107)
    on left: 63 64, on right: 64 65 80
assignment_expression (108)
    on left: 65 66, on right: 19 20 66 78 79 134 142 158
assignment_operator (109)
    on left: 67 68 69 70 71 72 73 74 75 76 77, on right: 66
expression (110)
    on left: 78 79, on right: 8 10 64 79 186 187 188 189 190 191 193
    198
constant_expression (111)
    on left: 80, on right: 124 168 177
declaration (112)
    on left: 81 82, on right: 183 202 207 208
declaration_specifiers (113)
    on left: 83 84 85 86 87 88 89 90, on right: 81 82 84 86 88 90 153
    154 203 204
init_declarator_list (114)
    on left: 91 92, on right: 82 92
init_declarator (115)
    on left: 93 94, on right: 91 92
storage_class_specifier (116)
    on left: 95 96 97 98, on right: 83 84
type_specifier (117)
    on left: 99 100 101 102 103 104 105 106 107 108 109 110 111, on right:
    85 86 112 113
specifier_qualifier_list (118)
    on left: 112 113 114 115, on right: 112 114 157
enum_specifier (119)
    on left: 116 117 118 119 120, on right: 111
enumerator_list (120)
    on left: 121 122, on right: 116 117 118 119 122
enumerator (121)
    on left: 123 124, on right: 121 122
type_qualifier (122)
    on left: 125 126 127, on right: 87 88 114 115 147 148
function_specifier (123)
    on left: 128, on right: 89 90
declarator (124)
    on left: 129 130, on right: 93 94 132 153 203 204 205 206
direct_declarator (125)
    on left: 131 132 133 134 135 136 137 138, on right: 129 130 133
    134 135 136 137 138
type_qualifier_list_opt (126)
    on left: 139 140, on right: 133 134 135
assignment_expression_opt (127)
    on left: 141 142, on right: 133
pointer (128)
    on left: 143 144 145 146, on right: 129 145 146
type_qualifier_list (129)
    on left: 147 148, on right: 140 144 146 148
parameter_type_list (130)
    on left: 149 150, on right: 136
parameter_list (131)
    on left: 151 152, on right: 149 150 152
parameter_declaration (132)
    on left: 153 154, on right: 151 152
identifier_list (133)
    on left: 155 156, on right: 137 156
type_name (134)
    on left: 157, on right: 17 18 26 34
initializer (135)
    on left: 158 159 160, on right: 94 161 162 163 164
initializer_list (136)
    on left: 161 162 163 164, on right: 17 18 159 160 163 164
designation (137)
    on left: 165, on right: 162 164
designator_list (138)
    on left: 166 167, on right: 165 167
designator (139)
    on left: 168 169, on right: 166 167
statement (140)
    on left: 170 171 172 173 174 175, on right: 176 177 178 184 187
    188 189 190 191 192 193
labeled_statement (141)
    on left: 176 177 178, on right: 170
compound_statement (142)
    on left: 179 180, on right: 171 203 204 205 206
block_item_list (143)
    on left: 181 182, on right: 180 182
block_item (144)
    on left: 183 184, on right: 181 182
expression_statement (145)
    on left: 185 186, on right: 172 192 193
selection_statement (146)
    on left: 187 188 189, on right: 173
iteration_statement (147)
    on left: 190 191 192 193, on right: 174
jump_statement (148)
    on left: 194 195 196 197 198, on right: 175
translation_unit (149)
    on left: 199 200, on right: 0 200
external_declaration (150)
    on left: 201 202, on right: 199 200
function_definition (151)
    on left: 203 204 205 206, on right: 201
declaration_list (152)
    on left: 207 208, on right: 203 205 208


State 0

    0 $accept: . translation_unit $end

    EXTERN      shift, and go to state 1
    STATIC      shift, and go to state 2
    AUTO        shift, and go to state 3
    REGISTER    shift, and go to state 4
    VOID        shift, and go to state 5
    CHAR        shift, and go to state 6
    SHORT       shift, and go to state 7
    INT         shift, and go to state 8
    LONG        shift, and go to state 9
    FLOAT       shift, and go to state 10
    DOUBLE      shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    BOOL        shift, and go to state 14
    COMPLEX     shift, and go to state 15
    IMAGINARY   shift, and go to state 16
    ENUM        shift, and go to state 17
    CONST       shift, and go to state 18
    RESTRICT    shift, and go to state 19
    VOLATILE    shift, and go to state 20
    INLINE      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    '('         shift, and go to state 23
    '*'         shift, and go to state 24

    declaration              go to state 25
    declaration_specifiers   go to state 26
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31
    declarator               go to state 32
    direct_declarator        go to state 33
    pointer                  go to state 34
    translation_unit         go to state 35
    external_declaration     go to state 36
    function_definition      go to state 37


State 1

   95 storage_class_specifier: EXTERN .

    $default  reduce using rule 95 (storage_class_specifier)


State 2

   96 storage_class_specifier: STATIC .

    $default  reduce using rule 96 (storage_class_specifier)


State 3

   97 storage_class_specifier: AUTO .

    $default  reduce using rule 97 (storage_class_specifier)


State 4

   98 storage_class_specifier: REGISTER .

    $default  reduce using rule 98 (storage_class_specifier)


State 5

   99 type_specifier: VOID .

    $default  reduce using rule 99 (type_specifier)


State 6

  100 type_specifier: CHAR .

    $default  reduce using rule 100 (type_specifier)


State 7

  101 type_specifier: SHORT .

    $default  reduce using rule 101 (type_specifier)


State 8

  102 type_specifier: INT .

    $default  reduce using rule 102 (type_specifier)


State 9

  103 type_specifier: LONG .

    $default  reduce using rule 103 (type_specifier)


State 10

  104 type_specifier: FLOAT .

    $default  reduce using rule 104 (type_specifier)


State 11

  105 type_specifier: DOUBLE .

    $default  reduce using rule 105 (type_specifier)


State 12

  106 type_specifier: SIGNED .

    $default  reduce using rule 106 (type_specifier)


State 13

  107 type_specifier: UNSIGNED .

    $default  reduce using rule 107 (type_specifier)


State 14

  108 type_specifier: BOOL .

    $default  reduce using rule 108 (type_specifier)


State 15

  109 type_specifier: COMPLEX .

    $default  reduce using rule 109 (type_specifier)


State 16

  110 type_specifier: IMAGINARY .

    $default  reduce using rule 110 (type_specifier)


State 17

  116 enum_specifier: ENUM . '{' enumerator_list '}'
  117               | ENUM . IDENTIFIER '{' enumerator_list '}'
  118               | ENUM . '{' enumerator_list ',' '}'
  119               | ENUM . IDENTIFIER '{' enumerator_list ',' '}'
  120               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 38
    '{'         shift, and go to state 39


State 18

  125 type_qualifier: CONST .

    $default  reduce using rule 125 (type_qualifier)


State 19

  127 type_qualifier: RESTRICT .

    $default  reduce using rule 127 (type_qualifier)


State 20

  126 type_qualifier: VOLATILE .

    $default  reduce using rule 126 (type_qualifier)


State 21

  128 function_specifier: INLINE .

    $default  reduce using rule 128 (function_specifier)


State 22

  131 direct_declarator: IDENTIFIER .

    $default  reduce using rule 131 (direct_declarator)


State 23

  132 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 22
    '('         shift, and go to state 23
    '*'         shift, and go to state 24

    declarator         go to state 40
    direct_declarator  go to state 33
    pointer            go to state 34


State 24

  143 pointer: '*' .
  144        | '*' . type_qualifier_list
  145        | '*' . pointer
  146        | '*' . type_qualifier_list pointer

    CONST     shift, and go to state 18
    RESTRICT  shift, and go to state 19
    VOLATILE  shift, and go to state 20
    '*'       shift, and go to state 24

    $default  reduce using rule 143 (pointer)

    type_qualifier       go to state 41
    pointer              go to state 42
    type_qualifier_list  go to state 43


State 25

  202 external_declaration: declaration .

    $default  reduce using rule 202 (external_declaration)


State 26

   81 declaration: declaration_specifiers . ';'
   82            | declaration_specifiers . init_declarator_list ';'
  203 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  204                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 22
    '('         shift, and go to state 23
    '*'         shift, and go to state 24
    ';'         shift, and go to state 44

    init_declarator_list  go to state 45
    init_declarator       go to state 46
    declarator            go to state 47
    direct_declarator     go to state 33
    pointer               go to state 34


State 27

   83 declaration_specifiers: storage_class_specifier .
   84                       | storage_class_specifier . declaration_specifiers

    EXTERN     shift, and go to state 1
    STATIC     shift, and go to state 2
    AUTO       shift, and go to state 3
    REGISTER   shift, and go to state 4
    VOID       shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    ENUM       shift, and go to state 17
    CONST      shift, and go to state 18
    RESTRICT   shift, and go to state 19
    VOLATILE   shift, and go to state 20
    INLINE     shift, and go to state 21

    $default  reduce using rule 83 (declaration_specifiers)

    declaration_specifiers   go to state 48
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 28

   85 declaration_specifiers: type_specifier .
   86                       | type_specifier . declaration_specifiers

    EXTERN     shift, and go to state 1
    STATIC     shift, and go to state 2
    AUTO       shift, and go to state 3
    REGISTER   shift, and go to state 4
    VOID       shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    ENUM       shift, and go to state 17
    CONST      shift, and go to state 18
    RESTRICT   shift, and go to state 19
    VOLATILE   shift, and go to state 20
    INLINE     shift, and go to state 21

    $default  reduce using rule 85 (declaration_specifiers)

    declaration_specifiers   go to state 49
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 29

  111 type_specifier: enum_specifier .

    $default  reduce using rule 111 (type_specifier)

